--- a/index.html
+++ b/index.html
@@ -1,7 +1,153 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <meta charset='utf-8' />
+    <title>#Data4Governance CcHUB Design Lab Showcase</title>
+    <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.44.1/mapbox-gl.js'></script>
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.44.1/mapbox-gl.css' rel='stylesheet' />
+    <style>
+        body { margin:0; padding:0; }
+        #map { position:absolute; top:0; bottom:0; width:100%; }
+    </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+<style>
+#map {
+    position: fixed;
+    width:60%;
+}
+#features {
+    width: 40%;
+    margin-left: 60%;
+    font-family: sans-serif;
+    overflow-y: scroll;
+    background-color: #fafafa;
+}
+section {
+    padding:  25px 50px;
+    line-height: 25px;
+    border-bottom: 1px solid #ddd;
+    opacity: 0.25;
+    font-size: 20px;
+}
+section.active {
+    opacity: 1;
+}
+section:last-child {
+    border-bottom: none;
+    margin-bottom: 1000px;
+}
+</style>
+
+<div id='map'></div>
+<div id='features'>
+    <section id='welcome' class='active'>
+        <h3>Access to Healthcare after an accident in Lagos - CcHUB Design Lab Showcase</h3>
+        <p>Access to healthcare is one of UN SGDs. In Africa, access to healthcare is one of the challenges facing nations' health systems. Nigeria is also one of them. <br><br>Road accidents cases are one of the most frequent in emergency rooms in our hospitals.<br><br>In this showcase, we ask "How easy is it to access healthcare after getting an accident in Lagos?". We explore the road accident deaths in Lagos, health facilities in the state, routes that are closest to the health facilities and the fastest ways to access the health facilities in the case of an accident. </p>
+    </section>
+    <section id='section1' class='active'>
+        <h3> Road Accidents in Lagos (2016 to 2020)</h3>
+        <p>Lagos State, the most economically active state of Nigeria, also has the highest population density of Nigeria's states (2,500/km2 (6,600/sq mi)). The state is also home to one of the most active cities in Nigeria. <br><br> Over the past 4 years, road accidents in Lagos have been on the increase. This has subsequently led to an increase in deaths in the State, as shown below. <br> <br> <img width="700" height="500" src="https://github.com/DeeKareithi/DeeKareithi.github.io/blob/master/images/Road%20Accidents%20Lagos%20(2006-2019).png?raw=true"> <br><br> </p> 
+    </section>
+    <section id='section2' class='active'>
+        <h3>Health Facility Distribution</h3>
+        <p>After getting an accident in Lagos, we ask ourselves, what are the closest health facilities that those injured can access? What Options do they have? <br> <br> Lagos state has a total of 1,438 human health facilities, according to data collected by Grid3(https://grid3.gov.ng) in 2019. <br><br> Most of these are private owned clinics as shown below: <br> <br> <img width="700" height="500" src="https://github.com/DeeKareithi/DeeKareithi.github.io/blob/master/images/Health%20Facilities%20in%20Lagos.png?raw=true"> <br><br> </p>
+    </section>
+    <section id='section3' class='active'>
+        <h3>Which is the fastest way to a health facility?</h3>
+        <p>Picture this, there has been an accident. The casualties need to be rushed to the health facility. Which is the fastest way to a health facility in Lagos?TTransport data from WorldBank from selected routes in Lagos shows that the longest route within Lagos is CMS-Epe: 77.2819 miles. Moreover, the data shows that the busiest route is  <b> Adeniji Adele Rd - 3rd Mainland Bridge at Osborne Outbound (101,922 traffic volume) </b>. <br> <br> The mode of trnsport with the highest traffic Lagos State is  personal cars/taxi (48%) followed by motorcycles (27%) <br><br>  <img width="650" height="400" src="https://github.com/DeeKareithi/DeeKareithi.github.io/blob/master/images/Modes%20of%20transport.png?raw=true"> <br><br></p
+    </section>
+    <section id='section4' class='active'>
+        <h3>Traffic Menance!</h3>
+        <p> Lagos is the stage with a busy city, Lagos mainland and island. With heavy traffic in most routes in Lagos, getting to a health facility in good time may not be very easy, unless one uses the route with minimum traffic. Recent technological advancements have made it possible to track routes with alot of traffic real time. Data from Google Maps highlighst the areas with the heaviest traffic in Lagos state (red highlight) and WorldBank Data shows the time of day with highest traffic in each LGA. <br><br> <iframe width="700" height="500" frameborder="0" scrolling="no" src="//plot.ly/~krrsteven/42.embed"></iframe> </p>
+        </p>
+    </section>
+    <section id='section5' class='active'>
+        <h3> Conclusion </h3>
+        <p> Average time taken to move within Lagos state  is 78.79348 (+54.70) minutes, range[10, 386] minutes. In addition, traffic data shows that there is less traffic in rural areas than urban areas like Lagos and Lekki. If one were to get an accident in LGAs like Ibeju Lekki with least traffic throughout and high population to health facility ratio (traffic of 21,424 and 3013 residents per health facility) , they would have a higher chance of accessing healthcare than people in LGAs like Agege (traffic of 133,009 and 8,700 residents per health facility). </p>
+    </section>
+</div>
+<script>
+mapboxgl.accessToken = 'pk.eyJ1IjoiZG9yY2thciIsImEiOiJjazZua21jaG4wdjk2M3RsaWp0dGVvdzAxIn0._WwBVT5xalfRp284lwtiEQ';
+var map = new mapboxgl.Map({
+    container: 'map',
+    style: 'mapbox://styles/mapbox/outdoors-v10',
+        bearing: -0,
+		center: [8.67739, 9.06327],
+		zoom: 5.91,
+        speed: 0.8,
+        pitch: 0
+});
+var chapters = {
+    'welcome': {
+        bearing: -0,
+        center: [8.67739, 9.06327],
+        zoom: 5.91,
+        speed: 0.8,
+        pitch: 0
+    },
+    'section1': {
+        bearing: 0,
+        center: [3.37822, 6.54319],
+        zoom: 10.00,
+        pitch: 45
+    },
+    'section2': {
+        center: [3.93338, 6.46770],
+        bearing: 0,
+        zoom: 12.56,
+        speed: 0.6,
+        pitch: 45.00
+    },
+    'section3': {
+        bearing: -43.30,
+        center: [3.339344, 6.529654],
+        zoom: 12.31,
+        speed: 0.6,
+        pitch: 45.00
+    },
+    'section4': {
+        bearing: 83.26,
+        center: [3.395472, 6.456084],
+        zoom: 14.20,
+        speed: 0.6,
+        pitch: 0
+    },
+    'section5': {
+		bearing: -0,
+        center: [8.67739, 9.06327],
+        zoom: 5.91,
+        speed: 0.8,
+        pitch: 0
+    },
+	
+};
+// On every scroll event, check which element is on screen
+window.onscroll = function() {
+    var chapterNames = Object.keys(chapters);
+    for (var i = 0; i < chapterNames.length; i++) {
+        var chapterName = chapterNames[i];
+        if (isElementOnScreen(chapterName)) {
+            setActiveChapter(chapterName);
+            break;
+        }
+    }
+};
+var activeChapterName = 'baker';
+function setActiveChapter(chapterName) {
+    if (chapterName === activeChapterName) return;
+    map.flyTo(chapters[chapterName]);
+    document.getElementById(chapterName).setAttribute('class', 'active');
+    document.getElementById(activeChapterName).setAttribute('class', '');
+    activeChapterName = chapterName;
+}
+function isElementOnScreen(id) {
+    var element = document.getElementById(id);
+    var bounds = element.getBoundingClientRect();
+    return bounds.top < window.innerHeight && bounds.bottom > 0;
+}
+</script>
 </body>
 </html>
